[gd_scene load_steps=3 format=3 uid="uid://cvsoihnpe5rct"]

[ext_resource type="Script" path="res://Characters/NPCs/talk_area_2d.gd" id="1_xplmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qjld"]
size = Vector2(100, 20)

[node name="TalkArea2D" type="Area2D"]
collision_layer = 1024
collision_mask = 18
script = ExtResource("1_xplmi")

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = -129.0
offset_top = -48.0
offset_right = 129.0
offset_bottom = -27.0
text = "Press blank to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2qjld")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
